add double ma strategy

--- a/tushare_study/strategies/doubleMA.ipynb
+++ b/tushare_study/strategies/doubleMA.ipynb
@@ -199,6 +199,37 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Portfolio Value: 10000.00\n",
+      "Final Portfolio Value: 10000.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import backtrader as bt\n",
+    "\n",
+    "cerebro = bt.Cerebro()\n",
+    "\n",
+    "print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
+    "\n",
+    "cerebro.run()\n",
+    "\n",
+    "print('Final Portfolio Value: %.2f' % cerebro.broker.getvalue())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
